--- a/plugin_src/popup.html
+++ b/plugin_src/popup.html
@@ -27,7 +27,7 @@
       <input type="text" name="bookname" id="bookname"/>
       <p>wordbook describe:</p>
       <input type="text" name="describe" id="describe"/>
-      <button id="test" type="button">unit</button>
-      <button id="word" type="button">word</button>
+      <input type="file" id="file"/>
+      <button id="test" type="button">load</button>
   </body>
 </html>
