add addunit loop code

--- a/plugin_src/popup.html
+++ b/plugin_src/popup.html
@@ -29,5 +29,6 @@
       <input type="text" name="describe" id="describe"/>
       <input type="file" id="file"/>
       <button id="test" type="button">load</button>
+      <button id="newtab" type="button">newtabs</button>
   </body>
 </html>
