add new tab page

--- a/plugin_src/popup.html
+++ b/plugin_src/popup.html
@@ -1,34 +1,12 @@
-<!doctype html>
-<html>
-  <head>
-    <title>Getting Started Extension's Popup</title>
-    <style>
-      body {
-        min-width: 357px;
-        overflow-x: hidden;
-      }
-
-      img {
-        margin: 5px;
-        border: 2px solid black;
-        vertical-align: middle;
-        width: 75px;
-        height: 75px;
-      }
-    </style>
+<!DOCTYPE html> 
+<html> 
+<head> 
+    <title>read text file</title> 
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script type="text/javascript" src="jquery-1.11.1.min.js"></script>
     <script src="popup.js"></script>
-  </head>
-  <body>
-      <div id="msg"></div>
-      <div id="shuzu"></div>
-      <div id="num"></div>
-      <p>wordbook name:</p>
-      <input type="text" name="bookname" id="bookname"/>
-      <p>wordbook describe:</p>
-      <input type="text" name="describe" id="describe"/>
-      <input type="file" id="file"/>
-      <button id="test" type="button">load</button>
-      <button id="newtab" type="button">newtabs</button>
-  </body>
+</head>
+<body>
+    <button id="hahah">hahahah</button>
+</body>
 </html>
