--- a/plugin_src/s.html
+++ b/plugin_src/s.html
@@ -1,34 +1,30 @@
 <!doctype html>
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>Wizard Page</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <style>
-      body {
-        min-width: 357px;
-        overflow-x: hidden;
-      }
-
-      img {
-        margin: 5px;
-        border: 2px solid black;
-        vertical-align: middle;
-        width: 75px;
-        height: 75px;
-      }
+        #container {width: 100%;}
+        #photo {float: right; width: 50%;}
+        #content {float: left; width: 50%;}
+        #text { margin-left: 180px; margin-top: 40px }
     </style>
     <script type="text/javascript" src="jquery-1.11.1.min.js"></script>
     <script src="popup.js"></script>
   </head>
   <body>
-      <div id="msg"></div>
-      <div id="shuzu"></div>
-      <div id="num"></div>
-      <p>wordbook name:</p>
-      <input type="text" name="bookname" id="bookname"/>
-      <p>wordbook describe:</p>
-      <input type="text" name="describe" id="describe"/>
-      <input type="file" id="file"/>
-      <button id="test" type="button">load</button>
-      <button id="newtab" type="button">newtabs</button>
+    <div id="container">
+        <div id="photo"><img src="introduction.jpg" /></div>
+        <div id="content">
+           <div id="text">
+               <p>id:<input type="text" name="bookid" id="bookid"/></p>
+               <input type="file" id="file"/>
+               <br/>
+               <br/>
+               <button id="test" type="button">开始添加单词</button>
+           </div>
+        </div>
+     </div>
+
   </body>
 </html>
