--- a/plugin_src/popup.html
+++ b/plugin_src/popup.html
@@ -4,9 +4,9 @@
     <title>read text file</title> 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script type="text/javascript" src="jquery-1.11.1.min.js"></script>
-    <script src="popup.js"></script>
+    <script type="text/javascript" src="popup.js"></script>
 </head>
 <body>
-    <button id="hahah">hahahah</button>
+    <button id="ready_add">准备添加单词</button>
 </body>
 </html>
